Remove PermSize/MaxPermSize (ignored in Java 8)